# bidirectional-instances

./: CHANGELOG.md  README.md  bidirectional-instances.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
examples/: Example1.hs  Example1Alternative.hs  Example1PreludeTH.hs  Example1TH.hs  Example2.hs  Example2Alternative.hs  Example2TH.hs  Main.hs  Overlap.hs  README.md
src/Control/: Bidirectional.hs
src/Control/Bidirectional/: Class.hs  TH.hs
