cabal-version:      3.0
name:               bidirectional-instances
version:            0.1.0.0
synopsis:           Class for bidirectional instances and TH methods for
                    generating instances for it

homepage:           https://github.com/Lev135/bidirectional-instances
bug-reports:        https://github.com/Lev135/bidirectional-instances/issues

license:            MIT
license-file:       LICENSE
author:             Lev135
maintainer:         lev_135@mail.ru
copyright:          Lev Dvorkin (c) 2022
-- category:

library
    exposed-modules:  Control.Bidirectional
                      Control.Bidirectional.Class
                      Control.Bidirectional.TH

    build-depends:    base ^>=4.14.3.0
                    , template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable examples
    main-is:          Main.hs

    other-modules:    Example1
                      Example2
                      Example1Alternative
                      Example2Alternative
                      Example1TH
                      Example2TH
                      Example1PreludeTH
                      Overlap

    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , transformers
                    , bidirectional-instances
    hs-source-dirs:   examples
    default-language: Haskell2010
